[gd_scene load_steps=41 format=2]

[ext_resource path="res://SRC/animacao cor corrida/frame0001.png" type="Texture" id=1]
[ext_resource path="res://SRC/controlejogador.gd" type="Script" id=2]
[ext_resource path="res://SRC/animacao cor corrida/frame_hurt.png" type="Texture" id=3]
[ext_resource path="res://SRC/animacao cor corrida/frame0007.png" type="Texture" id=5]
[ext_resource path="res://SRC/animacao cor corrida/frame0011.png" type="Texture" id=6]
[ext_resource path="res://SRC/animacao cor corrida/frame0009.png" type="Texture" id=7]
[ext_resource path="res://SRC/animacao cor corrida/frame0013.png" type="Texture" id=8]
[ext_resource path="res://SRC/animacao cor corrida/frame0015.png" type="Texture" id=9]
[ext_resource path="res://SRC/animacao cor corrida/frame0017.png" type="Texture" id=10]
[ext_resource path="res://SRC/animacao cor corrida/frame0019.png" type="Texture" id=11]
[ext_resource path="res://SRC/animacao cor corrida/frame0021.png" type="Texture" id=12]
[ext_resource path="res://SRC/animacao cor corrida/frame0023.png" type="Texture" id=13]
[ext_resource path="res://SRC/animacao cor corrida/frame0025.png" type="Texture" id=14]
[ext_resource path="res://SRC/animacao cor corrida/frame0027.png" type="Texture" id=15]
[ext_resource path="res://SRC/animacao cor corrida/frame0029.png" type="Texture" id=16]
[ext_resource path="res://SRC/Actors/Gun.gd" type="Script" id=17]
[ext_resource path="res://SRC/animacao cor corrida/frame0031.png" type="Texture" id=18]
[ext_resource path="res://SRC/animacao cor corrida/frame0035.png" type="Texture" id=19]
[ext_resource path="res://SRC/animacao cor corrida/frame0033.png" type="Texture" id=20]
[ext_resource path="res://SRC/animacao cor corrida/frame0037.png" type="Texture" id=21]
[ext_resource path="res://SRC/animacao cor corrida/frame0041.png" type="Texture" id=22]
[ext_resource path="res://SRC/animacao cor corrida/frame0039.png" type="Texture" id=23]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque1katana.png" type="Texture" id=48]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque2katana.png" type="Texture" id=49]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque6katana.png" type="Texture" id=50]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque9katana.png" type="Texture" id=51]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque10katana.png" type="Texture" id=52]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque8katana.png" type="Texture" id=53]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque5katana.png" type="Texture" id=54]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque4katana.png" type="Texture" id=55]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque7katana.png" type="Texture" id=56]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque12katana.png" type="Texture" id=57]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque11katana.png" type="Texture" id=58]
[ext_resource path="res://ASSETS/Jogador/ataque/ataque3katana.png" type="Texture" id=59]

[sub_resource type="CapsuleShape2D" id=1]
radius = 387.647
height = 1017.49

[sub_resource type="CapsuleShape2D" id=2]
radius = 387.647
height = 1017.49

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "null",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "tomou",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 22 ) ],
"loop": true,
"name": "movimento",
"speed": 20.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 49 ), ExtResource( 59 ), ExtResource( 55 ), ExtResource( 54 ), ExtResource( 50 ), ExtResource( 56 ), ExtResource( 53 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 58 ), ExtResource( 57 ) ],
"loop": true,
"name": "ataque",
"speed": 24.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "movimentoagachado",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "wall",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 49 ), ExtResource( 59 ), ExtResource( 55 ), ExtResource( 54 ), ExtResource( 50 ), ExtResource( 56 ), ExtResource( 53 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 58 ), ExtResource( 57 ) ],
"loop": true,
"name": "ataque2",
"speed": 24.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "gun",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.44482, 10.9332 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 6.15201
height = 9.8776

[node name="Jogador" type="Node2D" groups=[
"Player",
]]
scale = Vector2( 3.89737, 3.38809 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 1.04904e-05, 2.38419e-05 )
rotation = 3.14159
scale = Vector2( 7.53472, -6.84281 )
collision_layer = 11
collision_mask = 137
script = ExtResource( 2 )
gravity = 200.0
speed = Vector2( 50, 100 )

[node name="ResetAttack" type="Timer" parent="Player"]

[node name="Timer" type="Timer" parent="Player"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.0383239, -3.02618 )
scale = Vector2( 0.0140651, 0.0141908 )
shape = SubResource( 1 )

[node name="CollisionCrouch" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.0383332, 3.11179 )
scale = Vector2( 0.014, 0.007 )
shape = SubResource( 2 )
disabled = true

[node name="Slide" type="AnimatedSprite" parent="Player"]
position = Vector2( -1.4439, -0.399014 )
scale = Vector2( 0.849069, 0.840374 )
frames = SubResource( 3 )
animation = "null"

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player" groups=[
"Player",
]]
position = Vector2( -0.69631, -1.36763 )
scale = Vector2( 0.0280299, 0.0312663 )
frames = SubResource( 4 )
animation = "ataque"
frame = 3
playing = true
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -2.61352, -3.13181 )
scale = Vector2( 0.792654, 0.916517 )
offset = Vector2( 0.105, 8.172 )
current = true
zoom = Vector2( 0.892, 0.851 )

[node name="Position2D" type="Position2D" parent="Player"]
position = Vector2( -5.69713, -3.40228 )
rotation = 2.27374e-13
__meta__ = {
"_gizmo_extents_": 1000.0
}

[node name="AttackArea" type="Area2D" parent="Player" groups=[
"Sword",
]]
collision_layer = 19
collision_mask = 2147483667

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AttackArea"]
position = Vector2( -13.9914, -7.20446 )
scale = Vector2( 0.849069, 0.840374 )
shape = SubResource( 5 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/AttackArea"]
position = Vector2( 14.3516, -7.48073 )
scale = Vector2( 0.849069, 0.840374 )
shape = SubResource( 5 )
disabled = true

[node name="Sprite" type="Sprite" parent="Player"]
visible = false
position = Vector2( 0.273215, -0.347702 )
texture = ExtResource( 16 )

[node name="Gun" type="Position2D" parent="Player/Sprite"]
position = Vector2( -9.8059, -3.05831 )
rotation = 2.27374e-13
script = ExtResource( 17 )

[node name="RayTop" type="RayCast2D" parent="Player"]
position = Vector2( 0.172235, -3.31064 )
rotation = -0.0254332
scale = Vector2( 0.132726, -0.146132 )
enabled = true
collision_mask = 9

[node name="HitBox" type="Area2D" parent="Player" groups=[
"Player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/HitBox"]
position = Vector2( -0.198864, -1.75169 )
shape = SubResource( 6 )

[node name="Invencivel" type="Timer" parent="Player"]
one_shot = true

[node name="TImerAtack" type="Timer" parent="Player"]
one_shot = true
[connection signal="timeout" from="Player/ResetAttack" to="Player" method="_on_ResetAttack_timeout"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Player/HitBox" to="Player" method="_on_HitBox_area_entered"]
